<resources>
    <string name="app_name">TestFYP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_signup">Sign Up</string>
    <string name="menu_home">Home</string>
    <string name="menu_recipe">Recipe</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_tracker">Trackers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_community">Community</string>
</resources>