<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_recipe" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reminder" />

        <item
            android:id="@+id/nav_tracker"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tracker" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_journal" />

        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_community" />
    </group>
</menu>